Clean up creat-next-app and initialize Excavate project

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 # production
 /build
 
+# development
+/.idea
+
 # misc
 .DS_Store
 *.pem
@@ -34,3 +37,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
